Include more open prices day of

--- a/506_Final_Project.ipynb
+++ b/506_Final_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzQkxMPxLAh1vyXnjwvb8k",
+      "authorship_tag": "ABX9TyPDiawbY3mVcqG1jwmC8mzj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1251,9 +1251,10 @@
         "# Define market groups\n",
         "asian_markets = ['Nikkei 225 (Japan)', 'Hang Seng (Hong Kong)', 'SSE Composite (China)', 'ASX 200 (Australia)']\n",
         "european_markets = ['DAX (Germany)', 'FTSE 100 (UK)', 'CAC 40 (France)', 'Euro Stoxx 50 (EU)']\n",
-        "us_markets = ['SPY', 'VIX (US)', 'US Dollar Index']\n",
+        "us_markets = ['SPY']\n",
         "currency_pairs = ['EUR/USD', 'JPY/USD', 'CNY/USD']\n",
         "commodities = ['Gold', 'Crude Oil', 'Silver', 'Corn', 'Copper']\n",
+        "volatility_indices = ['VIX (US)',  'US Dollar Index']\n",
         "\n",
         "# First, create lagged versions of ALL columns\n",
         "for col in base_df.columns:\n",
@@ -1276,6 +1277,24 @@
         "# SPY - current day Open\n",
         "if 'SPY_Open' in base_df.columns:\n",
         "    base_df_10am['SPY_Open_current'] = base_df['SPY_Open']\n",
+        "\n",
+        "# Volatility indices - current day Open\n",
+        "for market in volatility_indices:\n",
+        "    col_name = f'{market}_Open'\n",
+        "    if col_name in base_df.columns:\n",
+        "        base_df_10am[f'{col_name}_current'] = base_df[col_name]\n",
+        "\n",
+        "# Currency pairs - current day Open\n",
+        "for pair in currency_pairs:\n",
+        "    col_name = f'{pair}_Open'\n",
+        "    if col_name in base_df.columns:\n",
+        "        base_df_10am[f'{col_name}_current'] = base_df[col_name]\n",
+        "\n",
+        "# Commodities - current day Open\n",
+        "for commodity in commodities:\n",
+        "    col_name = f'{commodity}_Open'\n",
+        "    if col_name in base_df.columns:\n",
+        "        base_df_10am[f'{col_name}_current'] = base_df[col_name]\n",
         "\n",
         "# Target variable - current day\n",
         "if 'trend_i' in base_df.columns:\n",
@@ -1305,6 +1324,24 @@
         "if 'SPY_Open_current' in base_df_10am.columns:\n",
         "    columns_to_keep.append('SPY_Open_current')\n",
         "\n",
+        "# Keep current day Volatility indices Open\n",
+        "for market in volatility_indices:\n",
+        "    col_name = f'{market}_Open_current'\n",
+        "    if col_name in base_df_10am.columns:\n",
+        "        columns_to_keep.append(col_name)\n",
+        "\n",
+        "# Keep current day Currency pairs Open\n",
+        "for pair in currency_pairs:\n",
+        "    col_name = f'{pair}_Open_current'\n",
+        "    if col_name in base_df_10am.columns:\n",
+        "        columns_to_keep.append(col_name)\n",
+        "\n",
+        "# Keep current day Commodities Open\n",
+        "for commodity in commodities:\n",
+        "    col_name = f'{commodity}_Open_current'\n",
+        "    if col_name in base_df_10am.columns:\n",
+        "        columns_to_keep.append(col_name)\n",
+        "\n",
         "# Keep current day target variable\n",
         "if 'trend_i_current' in base_df_10am.columns:\n",
         "    columns_to_keep.append('trend_i_current')\n",
@@ -1326,26 +1363,13 @@
         "print(\"\\nLagged columns (previous day):\")\n",
         "lagged_cols = [col for col in base_df_10am.columns if '_lag1' in col]\n",
         "print(f\"  Count: {len(lagged_cols)}\")\n",
-        "print(f\"  Examples: {lagged_cols[:5]}\")\n",
         "\n",
-        "print(\"\\nCurrent day Asian markets:\")\n",
-        "asian_current = [col for col in base_df_10am.columns if '_current' in col and any(market in col for market in asian_markets)]\n",
-        "print(f\"  Count: {len(asian_current)}\")\n",
-        "print(f\"  Columns: {asian_current}\")\n",
-        "\n",
-        "print(\"\\nCurrent day European markets:\")\n",
-        "european_current = [col for col in base_df_10am.columns if '_current' in col and any(market in col for market in european_markets)]\n",
-        "print(f\"  Count: {len(european_current)}\")\n",
-        "print(f\"  Columns: {european_current}\")\n",
-        "\n",
-        "print(\"\\nCurrent day US markets:\")\n",
-        "us_current = [col for col in base_df_10am.columns if '_current' in col and 'SPY' in col]\n",
-        "print(f\"  Count: {len(us_current)}\")\n",
-        "print(f\"  Columns: {us_current}\")\n",
-        "\n",
-        "print(\"\\nCurrent day target variable:\")\n",
-        "target_current = [col for col in base_df_10am.columns if 'trend_i_current' in col]\n",
-        "print(f\"  Columns: {target_current}\")\n",
+        "print(\"\\nCurrent day columns:\")\n",
+        "current_cols = [col for col in base_df_10am.columns if '_current' in col]\n",
+        "print(f\"  Count: {len(current_cols)}\")\n",
+        "print(f\"  Open prices: {len([col for col in current_cols if 'Open' in col])}\")\n",
+        "print(f\"  Close prices: {len([col for col in current_cols if 'Close' in col])}\")\n",
+        "print(f\"  Volume: {len([col for col in current_cols if 'Volume' in col])}\")\n",
         "\n",
         "# Check for missing values\n",
         "missing_summary = base_df_10am.isnull().sum()\n",
@@ -1353,27 +1377,22 @@
         "    print(\"\\nMissing values in final dataframe:\")\n",
         "    missing_df = pd.DataFrame({'Missing_Count': missing_summary[missing_summary > 0]})\n",
         "    missing_df['Percentage'] = (missing_df['Missing_Count'] / len(base_df_10am) * 100).round(2)\n",
-        "    print(missing_df)\n",
-        "\n",
-        "# Verify target variables are included\n",
-        "print(\"\\nTarget variables:\")\n",
-        "target_cols = ['trend_i_current']\n",
-        "print(f\"  {target_cols}\")"
+        "    print(missing_df)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7iCXdfrS3k9V",
-        "outputId": "d6e92c8a-b277-44be-b1a4-5968e0f1ef46"
+        "outputId": "4dc7b21c-9732-4558-b6df-082828bb5163"
       },
-      "execution_count": 17,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Final dataframe shape: (4604, 82)\n",
+            "Final dataframe shape: (4604, 92)\n",
             "\n",
             "Columns in final dataframe:\n",
             "  1. SPY_Close_lag1\n",
@@ -1457,47 +1476,44 @@
             " 79. CAC 40 (France)_Open_current\n",
             " 80. Euro Stoxx 50 (EU)_Open_current\n",
             " 81. SPY_Open_current\n",
-            " 82. trend_i_current\n",
+            " 82. VIX (US)_Open_current\n",
+            " 83. US Dollar Index_Open_current\n",
+            " 84. EUR/USD_Open_current\n",
+            " 85. JPY/USD_Open_current\n",
+            " 86. CNY/USD_Open_current\n",
+            " 87. Gold_Open_current\n",
+            " 88. Crude Oil_Open_current\n",
+            " 89. Silver_Open_current\n",
+            " 90. Corn_Open_current\n",
+            " 91. Copper_Open_current\n",
+            " 92. trend_i_current\n",
             "\n",
             "=== Data Structure at 10 AM EST ===\n",
             "\n",
             "Lagged columns (previous day):\n",
             "  Count: 64\n",
-            "  Examples: ['SPY_Close_lag1', 'SPY_High_lag1', 'SPY_Low_lag1', 'SPY_Open_lag1', 'SPY_Volume_lag1']\n",
             "\n",
-            "Current day Asian markets:\n",
-            "  Count: 12\n",
-            "  Columns: ['Nikkei 225 (Japan)_Open_current', 'Nikkei 225 (Japan)_Close_current', 'Nikkei 225 (Japan)_Volume_current', 'Hang Seng (Hong Kong)_Open_current', 'Hang Seng (Hong Kong)_Close_current', 'Hang Seng (Hong Kong)_Volume_current', 'SSE Composite (China)_Open_current', 'SSE Composite (China)_Close_current', 'SSE Composite (China)_Volume_current', 'ASX 200 (Australia)_Open_current', 'ASX 200 (Australia)_Close_current', 'ASX 200 (Australia)_Volume_current']\n",
-            "\n",
-            "Current day European markets:\n",
-            "  Count: 4\n",
-            "  Columns: ['DAX (Germany)_Open_current', 'FTSE 100 (UK)_Open_current', 'CAC 40 (France)_Open_current', 'Euro Stoxx 50 (EU)_Open_current']\n",
-            "\n",
-            "Current day US markets:\n",
-            "  Count: 1\n",
-            "  Columns: ['SPY_Open_current']\n",
-            "\n",
-            "Current day target variable:\n",
-            "  Columns: ['trend_i_current']\n",
+            "Current day columns:\n",
+            "  Count: 28\n",
+            "  Open prices: 19\n",
+            "  Close prices: 4\n",
+            "  Volume: 4\n",
             "\n",
             "Missing values in final dataframe:\n",
-            "                                    Missing_Count  Percentage\n",
-            "Nikkei 225 (Japan)_Open_lag1                  281        6.10\n",
-            "Nikkei 225 (Japan)_Close_lag1                 281        6.10\n",
-            "Nikkei 225 (Japan)_Volume_lag1                281        6.10\n",
-            "Hang Seng (Hong Kong)_Open_lag1               215        4.67\n",
-            "Hang Seng (Hong Kong)_Close_lag1              215        4.67\n",
-            "...                                           ...         ...\n",
-            "ASX 200 (Australia)_Volume_current            102        2.22\n",
-            "DAX (Germany)_Open_current                     81        1.76\n",
-            "FTSE 100 (UK)_Open_current                     85        1.85\n",
-            "CAC 40 (France)_Open_current                   46        1.00\n",
-            "Euro Stoxx 50 (EU)_Open_current               176        3.82\n",
+            "                                  Missing_Count  Percentage\n",
+            "Nikkei 225 (Japan)_Open_lag1                281        6.10\n",
+            "Nikkei 225 (Japan)_Close_lag1               281        6.10\n",
+            "Nikkei 225 (Japan)_Volume_lag1              281        6.10\n",
+            "Hang Seng (Hong Kong)_Open_lag1             215        4.67\n",
+            "Hang Seng (Hong Kong)_Close_lag1            215        4.67\n",
+            "...                                         ...         ...\n",
+            "Gold_Open_current                             3        0.07\n",
+            "Crude Oil_Open_current                        2        0.04\n",
+            "Silver_Open_current                           3        0.07\n",
+            "Corn_Open_current                             4        0.09\n",
+            "Copper_Open_current                           3        0.07\n",
             "\n",
-            "[70 rows x 2 columns]\n",
-            "\n",
-            "Target variables:\n",
-            "  ['trend_i_current']\n"
+            "[79 rows x 2 columns]\n"
           ]
         }
       ]
@@ -1510,6 +1526,15 @@
       "metadata": {
         "id": "6l5IjaqLeHHg"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uuUg-EHj80o_"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
