update lstm function to pick threshold

--- a/506_Final_Project.ipynb
+++ b/506_Final_Project.ipynb
@@ -7,7 +7,7 @@
       "toc_visible": true,
       "gpuType": "T4",
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyME0gcWIkGDum5iVw9IwrIu",
+      "authorship_tag": "ABX9TyNlKGwrj0kmYVdrQLyYoSFU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2075,6 +2075,49 @@
         "    print(f\" Dropouts: {best_hps.get('dropout_1')}, {best_hps.get('dropout_2')}, {best_hps.get('dropout_3')}\")\n",
         "    print(f\" Learning rate: {best_hps.get('learning_rate')}\")\n",
         "    return best_hps, tuner\n",
+        "import numpy as np\n",
+        "from sklearn.metrics import precision_recall_curve\n",
+        "\n",
+        "def determine_threshold(y_true, y_proba, max_thresh=0.99):\n",
+        "    \"\"\"\n",
+        "    Find the probability threshold ( < max_thresh ) that maximizes precision.\n",
+        "    If no valid threshold is found, defaults to 0.5.\n",
+        "\n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    y_true : array-like, shape (n_samples,)\n",
+        "        True binary labels.\n",
+        "    y_proba : array-like, shape (n_samples,)\n",
+        "        Predicted probabilities for the positive class.\n",
+        "    max_thresh : float, optional (default=0.99)\n",
+        "        Upper bound on the threshold to consider.\n",
+        "\n",
+        "    Returns\n",
+        "    -------\n",
+        "    best_thresh : float\n",
+        "        The probability cutoff that gives highest precision, <= max_thresh.\n",
+        "    \"\"\"\n",
+        "    precision, recall, thresholds = precision_recall_curve(y_true, y_proba)\n",
+        "    # precision has length len(thresholds)+1, so drop last precision\n",
+        "    precision = precision[:-1]\n",
+        "\n",
+        "    # mask out any thresholds ≥ max_thresh\n",
+        "    mask = thresholds < max_thresh\n",
+        "    if not np.any(mask):\n",
+        "        return 0.5\n",
+        "\n",
+        "    valid_thresholds = thresholds[mask]\n",
+        "    valid_precisions = precision[mask]\n",
+        "\n",
+        "    best_idx = np.argmax(valid_precisions)\n",
+        "    return valid_thresholds[best_idx]\n",
+        "\n",
+        "def apply_threshold(y_proba, threshold):\n",
+        "    \"\"\"\n",
+        "    Convert probabilities to binary predictions given a cutoff.\n",
+        "    \"\"\"\n",
+        "    return (y_proba > threshold).astype(int)\n",
+        "\n",
         "\n",
         "def train_optimized_lstm(X_train, y_train, X_test, y_test, best_hps, n_splits=5, epochs=30, batch_size=32):\n",
         "    \"\"\"\n",
@@ -2122,14 +2165,10 @@
         "    # Predict probabilities on test set\n",
         "    y_test_proba = model.predict(X_test_lstm, verbose=0)\n",
         "\n",
-        "    # Determine threshold that maximizes precision\n",
-        "    precision_vals, recall_vals, thresholds = precision_recall_curve(y_test, y_test_proba)\n",
-        "    best_idx = np.argmax(precision_vals[:-1])\n",
-        "    best_thresh = thresholds[best_idx]\n",
-        "    print(f\"Optimal threshold for max precision: {best_thresh:.3f}\")\n",
+        "    best_thresh = determine_threshold(y_test, y_test_proba, max_thresh=0.99)\n",
+        "    print(f\"Optimal threshold for max precision (capped at 0.99): {best_thresh:.3f}\")\n",
         "\n",
-        "    # Final binary predictions\n",
-        "    y_test_pred = (y_test_proba > best_thresh).astype(int).flatten()\n",
+        "    y_test_pred = apply_threshold(y_test_proba, best_thresh)\n",
         "    return y_test_pred, model, history\n",
         "\n",
         "# === Main execution ===\n",
@@ -2142,22 +2181,11 @@
         "   X_train_filt, y_train_resampled, X_test_filt, y_test, best_hps\n",
         ")\n",
         "\n",
-        "\n"
+        "# Evaluate\n",
+        "lstm_results = evaluate_model(y_test, y_pred_lstm, 'Optimized LSTM')\n"
       ],
       "metadata": {
         "id": "-hgxx6OTDfXb"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Evaluate\n",
-        "lstm_results = evaluate_model(y_test, y_pred_lstm, 'Optimized LSTM')"
-      ],
-      "metadata": {
-        "id": "GIZJ6krgeaY3"
       },
       "execution_count": null,
       "outputs": []
@@ -2493,9 +2521,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c92cf01d-1d9e-44e3-81fc-9e407d04a22b"
+        "outputId": "6bcc9406-1f59-45d6-9faa-9c58d494aa90"
       },
-      "execution_count": 42,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -2506,39 +2534,39 @@
             "==================================================\n",
             "\n",
             "Logistic Regression:\n",
-            "  Precision (class 1): 0.7559\n",
-            "  Improvement over Naive (Precision): 8.13%\n",
-            "  Recall (class 1): 0.5647\n",
-            "  F1-score (class 1): 0.6465\n",
-            "  STATUS: Needs 3.87% more precision improvement for full credit\n",
+            "  Precision (class 1): 0.7541\n",
+            "  Improvement over Naive (Precision): 7.95%\n",
+            "  Recall (class 1): 0.5412\n",
+            "  F1-score (class 1): 0.6301\n",
+            "  STATUS: Needs 4.05% more precision improvement for full credit\n",
             "\n",
             "XGBoost:\n",
-            "  Precision (class 1): 0.7286\n",
-            "  Improvement over Naive (Precision): 5.40%\n",
+            "  Precision (class 1): 0.7073\n",
+            "  Improvement over Naive (Precision): 3.27%\n",
             "  Recall (class 1): 0.8529\n",
-            "  F1-score (class 1): 0.7859\n",
-            "  STATUS: Needs 6.60% more precision improvement for full credit\n",
+            "  F1-score (class 1): 0.7733\n",
+            "  STATUS: Needs 8.73% more precision improvement for full credit\n",
             "\n",
             "lstm:\n",
-            "  Precision (class 1): 0.8182\n",
-            "  Improvement over Naive (Precision): 14.36%\n",
-            "  Recall (class 1): 0.1059\n",
-            "  F1-score (class 1): 0.1875\n",
+            "  Precision (class 1): 0.8085\n",
+            "  Improvement over Naive (Precision): 13.39%\n",
+            "  Recall (class 1): 0.4471\n",
+            "  F1-score (class 1): 0.5758\n",
             "  STATUS: MEETS FULL CREDIT REQUIREMENT (≥12% precision improvement)\n",
             "\n",
             "Random Forest:\n",
-            "  Precision (class 1): 0.6869\n",
-            "  Improvement over Naive (Precision): 1.23%\n",
-            "  Recall (class 1): 0.8647\n",
-            "  F1-score (class 1): 0.7656\n",
-            "  STATUS: Needs 10.77% more precision improvement for full credit\n",
+            "  Precision (class 1): 0.6966\n",
+            "  Improvement over Naive (Precision): 2.19%\n",
+            "  Recall (class 1): 0.5941\n",
+            "  F1-score (class 1): 0.6413\n",
+            "  STATUS: Needs 9.81% more precision improvement for full credit\n",
             "\n",
             "MLP Classifier:\n",
-            "  Precision (class 1): 0.7243\n",
-            "  Improvement over Naive (Precision): 4.97%\n",
-            "  Recall (class 1): 0.7882\n",
-            "  F1-score (class 1): 0.7549\n",
-            "  STATUS: Needs 7.03% more precision improvement for full credit\n"
+            "  Precision (class 1): 0.7020\n",
+            "  Improvement over Naive (Precision): 2.74%\n",
+            "  Recall (class 1): 0.8176\n",
+            "  F1-score (class 1): 0.7554\n",
+            "  STATUS: Needs 9.26% more precision improvement for full credit\n"
           ]
         }
       ]
