change how lstm threshold is calculated

--- a/506_Final_Project.ipynb
+++ b/506_Final_Project.ipynb
@@ -7,7 +7,7 @@
       "toc_visible": true,
       "gpuType": "T4",
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNlKGwrj0kmYVdrQLyYoSFU",
+      "authorship_tag": "ABX9TyMZZkewBwnLUjBLVluL3Ykh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -165,7 +165,7 @@
         "    #'Hang Seng (Hong Kong)': '^HSI',\n",
         "    #'SSE Composite (China)': '000001.SS',\n",
         "    #'ASX 200 (Australia)': '^AXJO',\n",
-        "    #'DAX (Germany)': '^GDAXI',\n",
+        "    'DAX (Germany)': '^GDAXI',\n",
         "    #'FTSE 100 (UK)': '^FTSE',\n",
         "    #'CAC 40 (France)': '^FCHI',\n",
         "    'Euro Stoxx 50 (EU)': '^STOXX50E',\n",
@@ -1514,7 +1514,9 @@
       "cell_type": "code",
       "source": [
         "# If you ever add more Asian indices (e.g. Hang Seng), just include them here:\n",
-        "asian_list = [\"Nikkei 225 (Japan)\"]\n",
+        "asian_list = [\"Nikkei 225 (Japan)\",\" Hang Seng (Hong Kong)\",\n",
+        "    \"SSE Composite (China)\",\n",
+        "    \"ASX 200 (Australia)\"]\n",
         "\n",
         "training_df = lag_unavailable_at_10am(\n",
         "    df_with_fred,\n",
@@ -2078,39 +2080,52 @@
         "import numpy as np\n",
         "from sklearn.metrics import precision_recall_curve\n",
         "\n",
-        "def determine_threshold(y_true, y_proba, max_thresh=0.99):\n",
+        "import numpy as np\n",
+        "from sklearn.metrics import precision_recall_curve\n",
+        "\n",
+        "def determine_threshold(y_true, y_proba, min_precision=0.79, max_thresh=0.99):\n",
         "    \"\"\"\n",
-        "    Find the probability threshold ( < max_thresh ) that maximizes precision.\n",
-        "    If no valid threshold is found, defaults to 0.5.\n",
+        "    Choose the probability threshold ( < max_thresh ) that\n",
+        "    maximizes the number of predicted 1’s while keeping precision >= min_precision.\n",
+        "    If no threshold meets the precision requirement, defaults to 0.5.\n",
         "\n",
         "    Parameters\n",
         "    ----------\n",
         "    y_true : array-like, shape (n_samples,)\n",
         "        True binary labels.\n",
-        "    y_proba : array-like, shape (n_samples,)\n",
+        "    y_proba : array-like, shape (n_samples,) or (n_samples, 1)\n",
         "        Predicted probabilities for the positive class.\n",
+        "    min_precision : float, optional (default=0.79)\n",
+        "        Minimum acceptable precision.\n",
         "    max_thresh : float, optional (default=0.99)\n",
         "        Upper bound on the threshold to consider.\n",
         "\n",
         "    Returns\n",
         "    -------\n",
         "    best_thresh : float\n",
-        "        The probability cutoff that gives highest precision, <= max_thresh.\n",
+        "        The probability cutoff that gives the most 1’s while maintaining precision >= min_precision.\n",
         "    \"\"\"\n",
+        "    # ensure flat array\n",
+        "    y_proba = np.ravel(y_proba)\n",
+        "\n",
         "    precision, recall, thresholds = precision_recall_curve(y_true, y_proba)\n",
-        "    # precision has length len(thresholds)+1, so drop last precision\n",
+        "    # drop last precision entry (no corresponding threshold)\n",
         "    precision = precision[:-1]\n",
         "\n",
-        "    # mask out any thresholds ≥ max_thresh\n",
-        "    mask = thresholds < max_thresh\n",
+        "    # find candidate thresholds\n",
+        "    mask = (thresholds < max_thresh) & (precision >= min_precision)\n",
         "    if not np.any(mask):\n",
+        "        print(f\"No threshold < {max_thresh} achieves precision ≥ {min_precision:.2f}; falling back to 0.5\")\n",
         "        return 0.5\n",
         "\n",
         "    valid_thresholds = thresholds[mask]\n",
-        "    valid_precisions = precision[mask]\n",
+        "    # compute how many 1’s each would predict\n",
+        "    counts = np.array([np.sum(y_proba > t) for t in valid_thresholds])\n",
         "\n",
-        "    best_idx = np.argmax(valid_precisions)\n",
+        "    # pick the threshold that gives the largest count of predicted 1’s\n",
+        "    best_idx = np.argmax(counts)\n",
         "    return valid_thresholds[best_idx]\n",
+        "\n",
         "\n",
         "def apply_threshold(y_proba, threshold):\n",
         "    \"\"\"\n",
@@ -2162,13 +2177,15 @@
         "        verbose=1\n",
         "    )\n",
         "\n",
-        "    # Predict probabilities on test set\n",
-        "    y_test_proba = model.predict(X_test_lstm, verbose=0)\n",
+        "    # after predicting probabilities on the test set\n",
+        "    y_test_proba = model.predict(X_test_lstm).flatten()\n",
         "\n",
-        "    best_thresh = determine_threshold(y_test, y_test_proba, max_thresh=0.99)\n",
-        "    print(f\"Optimal threshold for max precision (capped at 0.99): {best_thresh:.3f}\")\n",
+        "    best_thresh = determine_threshold(y_test, y_test_proba,\n",
+        "                                      min_precision=0.79, max_thresh=0.99)\n",
+        "    print(f\"Chosen threshold: {best_thresh:.3f}\")\n",
         "\n",
-        "    y_test_pred = apply_threshold(y_test_proba, best_thresh)\n",
+        "    y_test_pred = (y_test_proba > best_thresh).astype(int)\n",
+        "\n",
         "    return y_test_pred, model, history\n",
         "\n",
         "# === Main execution ===\n",
@@ -2521,9 +2538,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6bcc9406-1f59-45d6-9faa-9c58d494aa90"
+        "outputId": "2bed34be-b9c5-423d-8612-074e73e31023"
       },
-      "execution_count": 47,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -2534,39 +2551,39 @@
             "==================================================\n",
             "\n",
             "Logistic Regression:\n",
-            "  Precision (class 1): 0.7541\n",
-            "  Improvement over Naive (Precision): 7.95%\n",
-            "  Recall (class 1): 0.5412\n",
-            "  F1-score (class 1): 0.6301\n",
-            "  STATUS: Needs 4.05% more precision improvement for full credit\n",
+            "  Precision (class 1): 0.7212\n",
+            "  Improvement over Naive (Precision): 4.66%\n",
+            "  Recall (class 1): 0.7000\n",
+            "  F1-score (class 1): 0.7104\n",
+            "  STATUS: Needs 7.34% more precision improvement for full credit\n",
             "\n",
             "XGBoost:\n",
-            "  Precision (class 1): 0.7073\n",
-            "  Improvement over Naive (Precision): 3.27%\n",
-            "  Recall (class 1): 0.8529\n",
-            "  F1-score (class 1): 0.7733\n",
-            "  STATUS: Needs 8.73% more precision improvement for full credit\n",
+            "  Precision (class 1): 0.7182\n",
+            "  Improvement over Naive (Precision): 4.36%\n",
+            "  Recall (class 1): 0.7647\n",
+            "  F1-score (class 1): 0.7407\n",
+            "  STATUS: Needs 7.64% more precision improvement for full credit\n",
             "\n",
             "lstm:\n",
-            "  Precision (class 1): 0.8085\n",
-            "  Improvement over Naive (Precision): 13.39%\n",
-            "  Recall (class 1): 0.4471\n",
-            "  F1-score (class 1): 0.5758\n",
+            "  Precision (class 1): 0.8000\n",
+            "  Improvement over Naive (Precision): 12.54%\n",
+            "  Recall (class 1): 0.5882\n",
+            "  F1-score (class 1): 0.6780\n",
             "  STATUS: MEETS FULL CREDIT REQUIREMENT (≥12% precision improvement)\n",
             "\n",
             "Random Forest:\n",
-            "  Precision (class 1): 0.6966\n",
-            "  Improvement over Naive (Precision): 2.19%\n",
-            "  Recall (class 1): 0.5941\n",
-            "  F1-score (class 1): 0.6413\n",
-            "  STATUS: Needs 9.81% more precision improvement for full credit\n",
+            "  Precision (class 1): 0.7303\n",
+            "  Improvement over Naive (Precision): 5.57%\n",
+            "  Recall (class 1): 0.6529\n",
+            "  F1-score (class 1): 0.6894\n",
+            "  STATUS: Needs 6.43% more precision improvement for full credit\n",
             "\n",
             "MLP Classifier:\n",
-            "  Precision (class 1): 0.7020\n",
-            "  Improvement over Naive (Precision): 2.74%\n",
-            "  Recall (class 1): 0.8176\n",
-            "  F1-score (class 1): 0.7554\n",
-            "  STATUS: Needs 9.26% more precision improvement for full credit\n"
+            "  Precision (class 1): 0.7200\n",
+            "  Improvement over Naive (Precision): 4.54%\n",
+            "  Recall (class 1): 0.6353\n",
+            "  F1-score (class 1): 0.6750\n",
+            "  STATUS: Needs 7.46% more precision improvement for full credit\n"
           ]
         }
       ]
